@@ -128,6 +128,7 @@
 		aSERVICE_NAME+=('dnsmasq') 					#: https://github.com/Fourdee/DietPi/issues/1501
 		aSERVICE_NAME+=('dietpi-wifi-monitor') 		#: https://github.com/Fourdee/DietPi/issues/1288#issuecomment-350653480
 		aSERVICE_NAME+=('openvpn') 					#: https://github.com/Fourdee/DietPi/issues/1501
+		aSERVICE_NAME+=('vncserver') 				#: DietPi vnc server service/script
 
 	fi
 
