@@ -5,6 +5,7 @@ v6.3
 Changes / Improvements / Optimizations:
 
 Bug Fixes:
+DietPi-Software | Desktops: USB drive removed from .gtk-bookmarks as no longer used in DietPi.
 
 -----------------------------------------------------------------------------------------------------------
 
